@@ -143,16 +143,10 @@ protected:
     void write(unsigned n, const TYPE* values)
     {
         // buffer incoming data
-        if(__is_pod(TYPE) && n <= bufferSize_ && ((bufferSize_ - writeCount_) < n)) {
-            memcpy(nextSlot(), values, n);
-            writeCount_ += n;
-        }
-        else {
-            while (n) {
-                *nextSlot() = *values++;
-                commit();
-                --n;
-            }
+        while (n) {
+            *nextSlot() = *values++;
+            commit();
+            --n;
         }
         wakeUpReaders();
     }
