@@ -16,6 +16,8 @@ sensord (0.6.39) unstable; urgency=low
   * Fixed bug from SysfsAdaptor::writeToFile(): it used wrong method to get size of the buffer.
   * Removed FilterProperty: it had possible memory leak and could return references to already deleted memory.
   * AccelerometerChain transformation matrix is now instance specific.
+  * Changed buffersizes to 1.
+  * Removed ugly optimization from RingBuffer.
 
  -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 08 Feb 2011 13:35:32 +0200
 
